sass/_post.scss
.signature {
	display: block;
	padding: 1em 0 2em;
	border-bottom: 1px solid lighten($color-text, 70);
}
.footnotes {
	padding: 1em 0;
	font-style: italic;
	color: lighten($color-text, 50);
	border-bottom: 1px solid lighten($color-text, 70);
	hr {
		display: none;
	}
	ol {
		list-style-type: decimal;		
		list-style-position: outside;
	}
	li {
		padding-bottom: 1em;
	}
}
.footnotes li {
		position: relative;
		padding-right: 1em;
	}
	a[rev="footnote"] {
		position: absolute;
		top: 0;
		right: .5em;

	}
	.next-post, 
	.prev-post {
		margin-bottom: 1em;
		padding-left: 1em;
		border-left: 1px solid lighten($color-text, 70);
		@include mq(m) {
			margin-bottom: 0;
			padding-left: 0;
			border-left: 0 none;
		}
	}
@include mq(m) {
		 	
	.next-post {
		text-align: right;
	}
	.prev-post {
		border-right: 1px solid lighten($color-text, 70);
	}

}
.post__footer {
	padding: 1em 0;
	
}

